# Farmer

./: ### How I decide, step by step.md  ### Hyper-Meta Ruleset: Synthesizing Use.md  ### Who influenced this decision framewo  ### Why I decide that way  '.ini  .dockerignore  .gitignore  3gpt5.tex  ACADEMIC_NETWORK_ANALYZER.md  AcademicNetworkAnalyzer.java  AcademicNetworkAnalyzerExtensions.java  AcademicNetworkAnalyzerFixed.java  App.swift  CODE_OF_CONDUCT.md  COMPLETE_MATHEMATICAL_FRAMEWORK_SUMMARY.md  CONTRIBUTING.md  COPYRIGHT  CognitiveTracker.swift  ComprehensiveFrameworkExtensions.java  ContentView.swift  DGX_SPARK_SETUP_GUIDE.md  DemoScript.swift  ENHANCED_PSI_FRAMEWORK_DOCUMENTATION.md  EnhancedNatureCrossModalTest.java  Exactly right 👍 — the pole at s=1 is on  Exactly — you’ve nailed the subtlety.  FRAMEWORK_SUMMARY.md  Farmer_Showcase  File 2.txt  FinPredictor.swift  FinViewModel.swift  FinVisualizer.swift  HYBRID_PINN_README.md  Ha — I caught the pun, tangent on tangen  HybridAccuracyFunctional.swift  HybridPINN.swift  HybridPINNRK4.swift  IMO-2024-notes.tex  IMPLEMENTATION_FILES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  (+179 more)
.build/: build.db  debug.yaml  plugin-tools.yaml
.cursor/: environment.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
CFDVisualizationApp/: Package.swift  README.md
Corpus/: Ran tool.md
Farmer/: CFDSystemPenetrationTesting.swift  ContentView.swift  DemoPenetrationTestingView.swift  Farmer.entitlements  FarmerApp.swift  KSPenetrationTestingValidator.swift  PINN.swift  PINNExample.swift  PINNTestRunner.swift  PINNTraining.swift  PINNVisualization.swift  Persistence.swift  RK4Solver.swift  ReverseHierarchicalBayesianDemoApp.swift  ReverseHierarchicalBayesianModel.swift  ReverseHierarchicalBayesianModelTests.swift  ReverseHierarchicalBayesianViewModel.swift  ReverseKoopmanOperator.swift  __init__.py  iOSPenetrationTesting.swift
Farmer.xcodeproj/: project.pbxproj
FarmerTests/: FarmerTests.swift
FarmerUITests/: FarmerUITests.swift  FarmerUITestsLaunchTests.swift
FinCFDApp/: FinCFDApp.swift  README.md
FinCFDVisualizer/: FinCFDVisualizerApp.swift  README.md
FinCFDVisualizerApp/: Info.plist  README.md
FinFlowApp/: .swiftlint.yml  FinFlowApp.swift
LICENSES/: CC0-1.0.txt  GPL-3.0-only.txt  LicenseRef-Internal-Use-Only.txt
SwiftCFDApp/: .gitignore  README.md
VectorFinCFDApp/: CODEBASE_SUMMARY.md  CognitiveDetailView.swift  CognitiveTracker.swift  ContentView.swift  DataExportView.swift  FinPredictor.swift  FinViewModel.swift  FinVisualizer.swift  IMPLEMENTATION_SUMMARY.md  Info.plist  PROJECT_CONFIG.md  PerformanceDetailView.swift  README.md  SensorManager.swift  VectorFinCFDAppApp.swift
VectorFinCFDApp.xcodeproj/: project.pbxproj
ai_safety_demos/: adversarial_robustness_demo.py  ai_welfare_demo.py  mechanistic_interpretability_demo.py  model_organisms_demo.py  scalable_oversight_demo.py
archive/: ARCHIVE_JUSTIFICATION.md  README_original_framework.md  dockerfile.md
audit-logs/: audit-1754659424287.jsonl  audit-1754659613465.jsonl
cauchy_momentum_mojo/: README.md  koopman_theory.mojo  main.mojo  reynolds_transport.mojo  run_all_examples.mojo  validation_tests.mojo
certs/: cert.pem  key.pem
cfd_mojo/: README.md  plot_results.py  solver.mojo  solver_python.py
cfd_solver/: IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  run_simulation.py
config/: https.env
cursor_chats/: cursor_caching_strategies_and_implement.md  cursor_create_script_to_run_java_test.md  cursor_integration_of_deepmind_materialend080220251133pm.md  cursor_organizing_the_qualia_package_to.md  cursor_pythonmojojavaswiftprotodualassistant.md  ohmygod.md
docs/: API_DOCUMENTATION.md  EXAMPLES.md  GETTING_STARTED.md  PINN_Framework.md  README.md  TUTORIALS.md  ai_factory_initiative.md  api_reference.md  architecture.md  automation_roadmap.md  contemplative_ai_integration.md  examples.md  invisible_fin_design_framework.md  platform.md  (+3 more)
integrated/: cognitive_memory_metric_integration.py  contemplative_visual_grounding.py  contraction_psi_update.py  demo_contemplative_temporal_gradients.py  export_analysis_results.py  generate_comprehensive_report.py  hybrid_functional.py  hybrid_ks_integration.py  integrated_contemplative_framework.py  ks_validation_framework.py  minimal_contraction_psi.py  minimal_hybrid_functional.py  pinn_burgers.py  pyproject.toml  simple_analysis.py  swarm_koopman_cognitive_integration.py  swarm_koopman_extension.py  test_minimal.py  topic_modeling.py  unified_theoretical_framework.py  uq_examples.py  uq_monitoring.py  visualize_unified_framework.py
integrated/analysis/: export_analysis_results.py  generate_comprehensive_report.py
integrated/integrated_research_conform/: BasicNatureTest.java  CognitiveMemoryComponents.java  CognitiveMemoryFramework.java  ComprehensiveFrameworkIntegration.java  ComprehensiveFrameworkSupport.java  EnhancedResearchMatcher.java  FRAMEWORK_SUMMARY.md  FractalNatureTest.java  FractalPsiFramework.java  IntegratedResearchAnalysis.java  LSTMChaosPredictionEngine.java  PythonIntegration.java  README.md  ResearchMatchingDataStructures.java  SwarmKoopmanFramework.java  SwarmKoopmanNatureTest.java  UnifiedAcademicFramework.java  UnifiedFrameworkAnalysis.java  UnifiedFrameworkCompletion.java  nature_demo_insights.txt  pyproject.toml
integrated/integrated_research_conform/academic_network_analysis/: enhanced_nature_analysis.txt  nature_articles.csv  publications.csv  run_basic_nature_test.sh  run_comprehensive_framework.sh  run_integrated_analysis.sh  run_nature_test.sh  run_simple_nature_test.sh  run_unified_framework.sh
integrated/integrated_research_conform/core/: hybrid_functional.py  minimal_hybrid_functional.py
integrated/integrated_research_conform/docs/: PIXI_USAGE.md  README.md
integrated/integrated_research_conform/output/: communities.csv
integrated/integrated_research_conform/outputs/: contraction_summary.csv
integrated/integrated_research_conform/tests/: test_minimal.py
integrated/outputs/: comprehensive_analysis_report.md  contraction_analysis_results.json
(+1153 files in other folders)
