[project]
name = "hybrid-symbolic-neural-framework"
version = "0.1.0"
description = "Hybrid Symbolic-Neural Accuracy Functional with Contraction Guarantees"
authors = [
    {name = "Ryan David Oates", email = "ryan@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20.0"
matplotlib = ">=3.5.0"
scipy = ">=1.7.0"
jupyter = "*"
ipython = "*"
maven = ">=3.9.11,<4"

[tool.pixi.tasks]
# Core analysis tools
contraction-minimal = "python minimal_contraction_psi.py"
contraction-full = "python contraction_psi_update.py"
hybrid-minimal = "python minimal_hybrid_functional.py"
hybrid-full = "python hybrid_functional.py"
pinn-burgers = "python pinn_burgers.py"

# Academic network analysis
academic-basic = "cd academic_network_analysis && ./compile_and_run_basic.sh"
academic-enhanced = "cd academic_network_analysis && ./compile_and_run_enhanced.sh"
academic-nature = "cd academic_network_analysis && ./compile_and_run_nature.sh"

# Comprehensive analysis suite
analyze-all = { depends-on = ["contraction-analysis", "hybrid-analysis"] }
analyze-with-academic = { depends-on = ["contraction-analysis", "hybrid-analysis", "academic-analysis"] }
contraction-analysis = { cmd = "python minimal_contraction_psi.py", depends-on = ["setup-outputs"] }
hybrid-analysis = { cmd = "python minimal_hybrid_functional.py", depends-on = ["setup-outputs"] }
academic-analysis = { cmd = "bash -c 'cd academic_network_analysis && ./compile_and_run_basic.sh'", depends-on = ["setup-outputs"] }

# Utility tasks
setup-outputs = "mkdir -p outputs"
clean-outputs = "rm -rf outputs/*"
clean-java = "cd academic_network_analysis && find . -name '*.class' -delete"
clean-all = { depends-on = ["clean-outputs", "clean-java"] }

# Documentation and validation
compile-latex = "pdflatex contraction_spectral_theorems.tex"
validate-theory = { cmd = "python -c \"from minimal_contraction_psi import *; demonstrate_parameter_sensitivity()\"", depends-on = ["setup-outputs"] }

# Development tasks
format = "black *.py"
lint = "flake8 *.py --max-line-length=100 --ignore=E203,W503"
test-minimal = "python -m pytest -v test_minimal.py" 
test-all = "python -m pytest -v"

# Interactive analysis
jupyter-lab = "jupyter lab"
ipython-shell = "ipython"

# Benchmarking and performance
benchmark-contraction = { cmd = "python -c \"import time; from minimal_contraction_psi import *; start=time.time(); config=MinimalContractionConfig(); psi=MinimalContractionPsi(config); scenarios=create_test_scenarios(); results=psi.analyze_contraction_properties(scenarios); print(f'Analysis completed in {time.time()-start:.2f}s')\"", depends-on = ["setup-outputs"] }

# Export and reporting
export-results = { cmd = "python export_analysis_results.py", depends-on = ["analyze-all"] }
generate-report = { cmd = "python generate_comprehensive_report.py", depends-on = ["analyze-all"] }

# Quick demos
demo-contraction = "python -c 'from minimal_contraction_psi import *; config=MinimalContractionConfig(); psi=MinimalContractionPsi(config); scenarios=create_test_scenarios()[:2]; psi.print_detailed_analysis(scenarios)'"
demo-hybrid = "python -c 'from minimal_hybrid_functional import *; functional=MinimalHybridFunctional(); print(\"Ψ(x) =\", functional.compute_psi_single(0.5, 1.0)[\"psi\"]); demonstrate_functional_behavior()'"

# Environments with features
[tool.pixi.environments]
default = { solve-group = "default" }
viz = { features = ["visualization"], solve-group = "viz" }

[tool.pixi.feature.visualization.dependencies]
plotly = "*"
seaborn = "*"

[tool.pixi.feature.visualization.tasks]
plot-contraction = "python plot_contraction_analysis.py"
plot-hybrid = "python plot_hybrid_functional.py"
interactive-demo = "python interactive_analysis_dashboard.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
